# snakemake-executor-plugin-kubernetes

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release-please.yml
.github/workflows/assets/: minio.yaml
docs/: further.md  intro.md
snakemake_executor_plugin_kubernetes/: __init__.py
tests/: tests.py
